# FIUBER-BO-BE

./: .gitignore  Dockerfile  README.md  kubernetes.yml  pyproject.toml
.github/workflows/: deployment.yml  tests.yml
fastapi_app/: app.py  crud.py  database.py  datadog_event.py  id_token.py  models.py  schemas.py
tests/: test_fastapi_app.py
