[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Guido Bergman <gbergman@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.42"
psycopg2-binary = "^2.9.4"
firebase-admin = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
requests = "^2.28.1"
black = "^22.8.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
